--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,15 +7,19 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
     "fs": "0.0.1-security",
-    "huejay": "file:../../huejay",
     "path": "^0.12.7",
+    "plex-oauth": "^2.0.2",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.1.0",
-    "react-router-dom": "^5.3.3",
+    "react-pro-sidebar": "^1.0.0",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.5",
+    "reactjs-popup": "^2.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
