--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "body-parser": "^1.19.0",
     "console-stamp": "^3.0.6",
     "cookie-parser": "~1.4.4",
+    "crc-32": "^1.2.2",
     "debug": "~2.6.9",
     "express": "^4.16.1",
     "http-errors": "~1.6.3",
     "huejay": "^1.9.0",
     "jade": "^1.11.0",
+    "mdns-discovery": "^0.2.6",
     "mdns-js": "^1.0.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "multicast-dns": "^7.2.5",
     "nodemon": "^2.0.13",
-    "request": "^2.88.2"
+    "plex-api": "^5.3.2",
+    "request": "^2.88.2",
+    "rotating-file-stream": "^3.0.4",
+    "uuid": "^8.3.2",
+    "xml2json": "^0.12.0"
   }
 }
