--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "crc-32": "^1.2.2",
+    "cross-env": "^7.0.3",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
     "plex-oauth": "^2.0.2",
@@ -24,7 +25,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "BUILD_PATH='./production' react-scripts build",
+    "build": "cross-env BUILD_PATH='./production' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
