--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
     "plex-api": "^5.3.2",
     "request": "^2.88.2",
     "uuid": "^8.3.2",
-    "xml2json": "^0.12.0"
+    "xml-js": "^1.6.11"
   }
 }
