--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "body-parser": "^1.19.0",
     "console-stamp": "^3.0.6",
     "cookie-parser": "~1.4.4",
