--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "body-parser": "^1.19.0",
     "console-stamp": "^3.0.6",
     "cookie-parser": "~1.4.4",
@@ -12,7 +13,6 @@
     "debug": "~2.6.9",
     "express": "^4.16.1",
     "http-errors": "~1.6.3",
-    "huejay": "^1.9.0",
     "mdns-discovery": "^0.2.6",
     "mdns-js": "^1.0.3",
     "morgan": "~1.9.1",
