Rebrand to Lumunarr

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HuePlex",
-  "name": "HuePlex - Hue Control for Plex",
+  "short_name": "Lumunarr",
+  "name": "Lumunarr - Hue Control for Plex",
   "icons": [
     {
       "src": "favicon.ico",
