--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "http-errors": "~1.6.3",
     "mdns-discovery": "^0.2.6",
     "mdns-js": "^1.0.3",
-    "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "multicast-dns": "^7.2.5",
     "nodemon": "^2.0.13",
     "plex-api": "^5.3.2",
     "request": "^2.88.2",
     "uuid": "^8.3.2",
+    "winston": "^3.15.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "xml-js": "^1.6.11"
   }
 }
