--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,26 +1,24 @@
 {
   "name": "frontend",
   "private": true,
+  "overrides": {
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.47",
+    "webpack-dev-server": "^5.2.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
+    "axios": "^0.28.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
-    "crc-32": "^1.2.2",
     "cross-env": "^7.0.3",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7",
     "plex-oauth": "^2.0.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.1.0",
-    "react-pro-sidebar": "^1.0.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
-    "reactjs-popup": "^2.0.5",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
